# idrissimart

./: .djlintrc  .dockerignore  .env.development  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  AD_ACTIONS_FIX_SUMMARY.md  CHANNELS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_FIX.md  DOCKER_COMMANDS.md  DOCKER_DEV_GUIDE.md  DOCKER_GUIDE.md  DOCKER_SETUP_SUMMARY.md  DUMMY_DATA_COMMAND.md  Dockerfile  MODAL_SYSTEM_GUIDE.md  Makefile  Makefile.dev  Makefile.docker  NEWSLETTER_CHANGES.md  NEWSLETTER_README.md  PAYMENT_GATEWAY_TESTING.md  PAYMENT_SETUP_STATUS.py  PAYMENT_TESTING_SETUP.md  PAYMENT_TESTING_START_HERE.md  PAYMENT_TEST_REFERENCE.py  PAYMOB_CONFIGURATION_FIX.py  PAYMOB_CONFIG_FIX.md  POETRY_GUIDE.md  POETRY_MIGRATION_COMPLETE.md  POPULATE_ADS_IMAGES_SUMMARY.md  PRODUCTION_FIX_STEPS.md  PYCHARM_CONFIG_FIX.md  PYCHARM_QUICKSTART.md  PYCHARM_RUN_CONFIGURATIONS.md  PYCHARM_SETUP_COMPLETE.md  PYCHARM_WSL_POETRY_SETUP.md  Pipfile  (+85 more)
.claude/: settings.local.json
.devcontainer/: README.md  devcontainer.json
api/: __init__.py  admin.py  filters.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
content/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  site_config.py  social_auth_config.py  tasks.py  urls.py  verification_decorators.py  verification_utils.py  views.py
docs/: 02_ajax.md  02_custom_commands_and_tags.md  02_management_commands.md  03_scheduled_tasks.md  04_login_redirect_system.md  ACCOUNT_DELETION_FIX.md  ADMIN_AD_ACTIONS_COMPREHENSIVE.md  ADMIN_CHAT_ICON_FEATURE.md  ADMIN_COUNTRIES_MANAGEMENT.md  ADMIN_CUSTOM_FIELDS_UPDATES.md  ADMIN_DASHBOARD_FIXES.md  ADMIN_DASHBOARD_UPDATES.md  ADMIN_PACKAGES_SUBSCRIPTIONS_MANAGEMENT.md  ADMIN_PACKAGE_ACTIVATION_FIX.md  ADMIN_PAGES_CHECKLIST.md  ADMIN_PAGES_CUSTOM_FIELDS_FIX.md  ADMIN_PAGES_FIX_SUMMARY.md  ADSENSE_GUIDE_AR.md  ADVERTISING_SPACE_ADMIN_GUIDE_AR.md  ADVERTISING_SPACE_SWIPER_FEATURE.md  AD_CHECKOUT_TESTING.md  AD_EXPIRATION_RENEWAL_SYSTEM.md  AD_FEATURES_PAYMENT_SYSTEM.md  AD_FEATURES_SYSTEM.md  AD_PRICING_SYSTEM.md  AD_PUBLISHER_DETAIL_ENHANCEMENTS.md  AD_PUBLISHER_DETAIL_FUNCTIONALITY_TEST.md  AD_RENEWAL_GUIDE.md  AD_UPGRADE_SYSTEM.md  AJAX_PACKAGES_LOADING.md  API_COMPLETE_ENDPOINT_GUIDE.md  API_IMPLEMENTATION_SUMMARY.md  API_README.md  API_REFERENCE.md  API_SETUP_CHECKLIST.md  API_SETUP_GUIDE.md  ARABIC_SLUG_FIX.md  AUTOMATION_SUMMARY.md  BLOCKED_WORDS_SYSTEM.md  BLOG_CARDS_RTL_ALIGNMENT_FIX.md  (+118 more)
idrissimart/: asgi.py  settings_production.py  urls.py  wsgi.py
main/: ad_actions_views.py  ad_features_models.py  ad_features_views.py  admin.py  admin_ad_views.py  admin_content_views.py  admin_groups.py  admin_orders_views.py  admin_review_views.py  apps.py  auth_views.py  blocked_words.py  blog_forms.py  blog_views.py  cart_wishlist_views.py  chat_admin.py  chat_views.py  chatbot_admin.py  chatbot_models.py  chatbot_service.py  chatbot_views.py  classifieds_views.py  consumers.py  context_processors.py  decorators.py  email_service.py  enhanced_views.py  facebook_share_admin_views.py  filters.py  filters.py.backup  forms.py  forms.py.bak  middleware.py  models.py  offline_payment_views.py  paid_ad_views.py  payment_services.py  payment_utils.py  payment_utils_old.py  payment_views.py  (+21 more)
scripts/: README_SET_PRICES.md  activate_categories_production.sh  generate_pdf.py  install_api.sh  set_category_prices_production.sh
(+530 files in other folders)
